# li-playwright

./: .gitignore  README.md  config.ini  config.ini.cpy  install-upgrade.sh  linkedin.py  pyproject.toml  requirements.txt
sample_data/: box.json  message_boxes.json  pipeline.json  pipelines.json  scrape_boxes.json
src/: __main__.py  linkedin.py  pr.py
src/linkedin/: messaging.py  scraping.py
src/message/: __main__.py  linkedin.py
src/message/streak/: Streak.py
src/streak/: Box.py  Streak.py  __init__.py
src/tgl/: __main__.py  linkedin.py
src/tgl/gmail/: email.py
src/tgl/linkedin/: connect.py  message.py  scrape.py  scrape_network.py  scrape_stage.py  withdraw.py
src/tgl/playwright/: playwright.py
src/tgl/streak/: Streak.py  box.py  streak.py
streak/: __init__.py  objects.py
