[build-system]
requires = ["build", "setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "li-playwright"
version = "0.0.4"
description = "Learning project for myself"
readme = "README.md"
requires-python = ">=3.12"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "playwright",
    "pyperclip",
    "requests",
]

[project.optional-dependencies]
dev = [
    "build",
    "debugpy",
]

[project.scripts]
message = "src.message.__main__:main"

